force-app/main/default/objects/Product2/fields/APT_Apttus_Product_Classification__c.field-meta.xml
<CustomField>
    <fullName>APT_Apttus_Product_Classification__c</fullName>
    <description>Classifies wheather the product belong to speed, feature or return group</description>
    <label>Apttus Product Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Postal Services</fullName>
            </value>
            <value>
                <fullName>Parcel Services</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Ancillary Fees</fullName>
            </value>
            <value>
                <fullName>Other Fees &amp; Services</fullName>
            </value>
            <value>
                <fullName>APPC</fullName>
            </value>
            <value>
                <fullName>APPC-Standard</fullName>
            </value>
            <value>
                <fullName>APPC-Premium</fullName>
            </value>
            <value>
                <fullName>APPC-Feature</fullName>
            </value>
            <value>
                <fullName>APPC-Surcharge</fullName>
            </value>
            <value>
                <fullName>APPC-Return</fullName>
            </value>
            <value>
                <fullName>APPC-FuelSurcharge</fullName>
            </value>
            <value>
                <fullName>PBP</fullName>
            </value>
			<value>
                <fullName>PBP-Transaction</fullName>
            </value>
			<value>
                <fullName>PBP-PaymentMethod</fullName>
            </value>
			<value>
                <fullName>PBP-Cheque</fullName>
            </value>
			<value>
                <fullName>PBP-CardFees</fullName>
            </value>
			<value>
                <fullName>PBP-SetupFees</fullName>
            </value>
			<value>
                <fullName>PBP-ChangeFees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>