force-app/main/default/objects/Product2/fields/APT_Contracting_Entity__c.field-meta.xml
<CustomField>
    <fullName>APT_Contracting_Entity__c</fullName>
    <description>This field is used to capture the associated contracting entity automatically on the proposal and contract records based on the products selected as the proposal line items.</description>
    <label>Contracting Entity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australian Postal Corporation</fullName>
            </value>
            <value>
                <fullName>Australia Post Global eCommerce Solutions (UK) Ltd</fullName>
            </value>
            <value>
                <fullName>Decipha Pty Ltd</fullName>
            </value>
            <value>
                <fullName>POLi Payments Pty Ltd</fullName>
            </value>
            <value>
                <fullName>Post Logistics (Hong Kong) Pty Ltd</fullName>
            </value>
            <value>
                <fullName>SecurePay Pty Ltd</fullName>
            </value>
            <value>
                <fullName>StarTrack Express Pty Ltd</fullName>
            </value>
            <value>
                <fullName>Australia Post Services Pty Ltd</fullName>
                <isActive>false</isActive>
                <label>Australia Post Services Pty Ltd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>