force-app/main/default/objects/Product2/fields/APT_Domestic_Pricing__c.field-meta.xml
<CustomField>
    <fullName>APT_Domestic_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if true then product pricing will be handled using domestic pricing batch</description>
    <inlineHelpText>if true then product pricing will be handled using domestic pricing batch</inlineHelpText>
    <label>Domestic Pricing</label>
    <type>Checkbox</type>
</CustomField>