force-app/main/default/objects/Product2/fields/APT_International_Pricing__c.field-meta.xml
<CustomField>
    <fullName>APT_International_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Calculate International Pricing using Batch</description>
    <inlineHelpText>if true then product pricing will be handled using international pricing batch</inlineHelpText>
    <label>International Pricing</label>
    <type>Checkbox</type>
</CustomField>