force-app/main/default/objects/Product2/fields/APT_Is_Cash_Account_Product__c.field-meta.xml
<CustomField>
    <fullName>APT_Is_Cash_Account_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if the Billing Account associated to the product is of Cash Type</description>
    <label>Is Cash Account Product</label>
    <type>Checkbox</type>
</CustomField>