force-app/main/default/objects/Product2/fields/APT_Is_Charge_Account_Product__c.field-meta.xml
<CustomField>
    <fullName>APT_Is_Charge_Account_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if the Billing Account associate to the product is of Charge Type</description>
    <label>Is Charge Account Product</label>
    <type>Checkbox</type>
</CustomField>