force-app/main/default/objects/Product2/fields/APT_Lodgement_Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>APT_Lodgement_Zone_Code__c</fullName>
    <description>Tells the Lodgment Zone Code of Lodgement Zone. Gives CA, CO and ME for Capital, Country and Metro respectively. Use to send information to I5</description>
    <label>Lodgement Zone Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>