force-app/main/default/objects/Product2/fields/APT_Network_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Network_Type__c</fullName>
    <label>Network Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>EXP</fullName>
            </value>
            <value>
                <fullName>FPP</fullName>
            </value>
            <value>
                <fullName>PRM</fullName>
            </value>
            <value>
                <fullName>RET</fullName>
            </value>
            <value>
                <fullName>RE2</fullName>
            </value>
            <value>
                <fullName>SE2</fullName>
            </value>
            <value>
                <fullName>SE3</fullName>
            </value>
            <value>
                <fullName>NXF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>