force-app/main/default/objects/Product2/fields/APT_Product_Lines__c.field-meta.xml
<CustomField>
    <fullName>APT_Product_Lines__c</fullName>
    <description>This is used to automate the determination of all the included product lines in an Agreement based on the products associated as proposal line items on a quote proposal.</description>
    <inlineHelpText>Decides the included product lines in Apttus Contract record.</inlineHelpText>
    <label>Product Lines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eParcels Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>StarTrack</fullName>
            </value>
            <value>
                <fullName>Local Pickup and Delivery Services</fullName>
            </value>
            <value>
                <fullName>UMS</fullName>
            </value>
            <value>
                <fullName>Workforce Verification</fullName>
            </value>
            <value>
                <fullName>Print Post</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
            <value>
                <fullName>Decipha</fullName>
            </value>
            <value>
                <fullName>Legacy Products</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>BPA - RETURNS</fullName>
            </value>
            <value>
                <fullName>BPA - REPLY+RETURNS</fullName>
            </value>
            <value>
                <fullName>Post Billpay OTC</fullName>
            </value>
            <value>
                <fullName>Post Billpay by Phone</fullName>
            </value>
            <value>
                <fullName>Post Billpay on the Internet</fullName>
            </value>
            <value>
                <fullName>Post Billpay Scan &amp; Pay</fullName>
            </value>
            <value>
                <fullName>Clean Mail</fullName>
            </value>
            <value>
                <fullName>Impact/Metered</fullName>
            </value>
            <value>
                <fullName>Local Country Letters</fullName>
            </value>
            <value>
                <fullName>Pre-Sort</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>SecurePay Online Payments</fullName>
            </value>
            <value>
                <fullName>Community Update</fullName>
            </value>
            <value>
                <fullName>Priority Product</fullName>
            </value>
            <value>
                <fullName>Track Mail</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
            </value>
            <value>
                <fullName>Parcel Contract</fullName>
            </value>
            <value>
                <fullName>Parcel Contract-Feature</fullName>
            </value>
            <value>
                <fullName>Parcel Contract-Surcharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>