force-app/main/default/objects/Product2/fields/APT_Product_type__c.field-meta.xml
<CustomField>
    <fullName>APT_Product_type__c</fullName>
    <label>Product type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unidentified</fullName>
            </value>
            <value>
                <fullName>eParcels Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>UMS</fullName>
            </value>
            <value>
                <fullName>Post Billpay</fullName>
            </value>
            <value>
                <fullName>Print Post</fullName>
            </value>
            <value>
                <fullName>Community Update</fullName>
            </value>
            <value>
                <fullName>Securepay</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Legacy Products</fullName>
            </value>
            <value>
                <fullName>StarTrack</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
            <value>
                <fullName>Decipha</fullName>
            </value>
            <value>
                <fullName>Workforce Verification</fullName>
            </value>
            <value>
                <fullName>Priority Product</fullName>
            </value>
            <value>
                <fullName>Local Pickup and Delivery Services</fullName>
            </value>
            <value>
                <fullName>Track Mail</fullName>
            </value>
            <value>
                <fullName>Parcel Contract</fullName>
            </value>
            <value>
                <fullName>Parcel Contract-Feature</fullName>
            </value>
            <value>
                <fullName>Parcel Contract-Surcharge</fullName>
            </value>
            <value>
                <fullName>Parcel Contract-Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>