force-app/main/default/objects/Product2/fields/APT_Sync_with_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>APT_Sync_with_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set Sync with Opportunity as true if you want to sync the product while sync with opportunity action otherwise false.</description>
    <inlineHelpText>Set Sync with Opportunity as true if you want to sync the product while sync with opportunity action otherwise false.</inlineHelpText>
    <label>Sync with Opportunity</label>
    <type>Checkbox</type>
</CustomField>