force-app/main/default/objects/Product2/fields/APT_What_is_the_max_weight_of_ur_parcel__c.field-meta.xml
<CustomField>
    <fullName>APT_What_is_the_max_weight_of_ur_parcel__c</fullName>
    <label>What is the max weight of your parcel?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Greater than 20 Kg</fullName>
            </value>
            <value>
                <fullName>2 - 20 Kg</fullName>
            </value>
            <value>
                <fullName>Less than 2 Kg</fullName>
            </value>
            <value>
                <fullName>Upto 20 Kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>