force-app/main/default/objects/Product2/fields/Apttus_Config2__ConfigurationType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConfigurationType__c</fullName>
    <description>The product configuration type</description>
    <label>Configuration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standalone</fullName>
                <default>true</default>
                <label>Standalone</label>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>