force-app/main/default/objects/Product2/fields/Apttus_Config2__ProductType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductType__c</fullName>
    <description>The product type</description>
    <inlineHelpText>The product type</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Entitlement</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Wallet</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Parcel Contract</fullName>
            </value>
            <value>
                <fullName>Parcel Contract-Feature</fullName>
            </value>
            <value>
                <fullName>Parcel Contract-Surcharge</fullName>
            </value>
            <value>
                <fullName>Parcel Contract-Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>