force-app/main/default/objects/Product2/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Customer (Renewal)</fullName>
                <default>true</default>
                <label>Existing Customer (Renewal)</label>
            </value>
            <value>
                <fullName>Existing Customer (Up Sell)</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>New Customer (One Off)</fullName>
            </value>
            <value>
                <fullName>Existing Customer (New Product)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>