force-app/main/default/objects/Product2/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>djk 06/10/2011</description>
    <externalId>true</externalId>
    <label>Product Legacy ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>