force-app/main/default/objects/Product2/fields/Lodgement_zone__c.field-meta.xml
<CustomField>
    <fullName>Lodgement_zone__c</fullName>
    <description>From parcel contract product, we are maintaining lodgement zone on product level and this field is created, so the product can be picked up by new pricing batch job solution</description>
    <label>Lodgement zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capital</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>