force-app/main/default/objects/Product2/fields/Non_Contestable_Product__c.field-meta.xml
<CustomField>
    <fullName>Non_Contestable_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, this indicates the product is not offered by any competitor (previously known as Reserved Services)</description>
    <inlineHelpText>If ticked, this indicates the product is not offered by any competitor (previously known as Reserved Services)</inlineHelpText>
    <label>Non-Contestable Product</label>
    <type>Checkbox</type>
</CustomField>