force-app/main/default/objects/Product2/fields/Non_contracted__c.field-meta.xml
<CustomField>
    <fullName>Non_contracted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non contracted</label>
    <type>Checkbox</type>
</CustomField>