force-app/main/default/objects/Product2/fields/Product_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Level_1__c</fullName>
    <label>Product Level 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>