force-app/main/default/objects/Product2/fields/Product_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Level_2__c</fullName>
    <label>Product Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AaE L2</fullName>
            </value>
            <value>
                <fullName>Addressed Mail</fullName>
            </value>
            <value>
                <fullName>AP Global Solutions</fullName>
            </value>
            <value>
                <fullName>Communication &amp; Insight Services</fullName>
            </value>
            <value>
                <fullName>Consumer Non Product</fullName>
            </value>
            <value>
                <fullName>Consumer Products</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Decipha &amp; Digital Mailbox</fullName>
            </value>
            <value>
                <fullName>Digital ID Services</fullName>
            </value>
            <value>
                <fullName>Digital Mailbox L2</fullName>
            </value>
            <value>
                <fullName>Domestic Express Post Envelopes</fullName>
            </value>
            <value>
                <fullName>Express Post</fullName>
            </value>
            <value>
                <fullName>Financial, Identity and Commercial Services</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Fulfilment &amp; Unaddressed</fullName>
            </value>
            <value>
                <fullName>Fulfilment L2</fullName>
            </value>
            <value>
                <fullName>Government Solutions Centre</fullName>
            </value>
            <value>
                <fullName>ID&amp;G and F&amp;CS</fullName>
            </value>
            <value>
                <fullName>Identity Services</fullName>
            </value>
            <value>
                <fullName>Industry Solutions</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>International Letters</fullName>
            </value>
            <value>
                <fullName>International Parcels</fullName>
            </value>
            <value>
                <fullName>Letters &amp; Mail Network - Domestic</fullName>
            </value>
            <value>
                <fullName>Letters &amp; Mail Network - International</fullName>
            </value>
            <value>
                <fullName>Mail Products</fullName>
            </value>
            <value>
                <fullName>Mailroom L2</fullName>
            </value>
            <value>
                <fullName>Mail Services</fullName>
            </value>
            <value>
                <fullName>Merchandise Services</fullName>
            </value>
            <value>
                <fullName>MRS &amp; Data Insights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>