force-app/main/default/objects/Product2/fields/Product_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Product_Level_3__c</fullName>
    <label>Product Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AaE L3</fullName>
            </value>
            <value>
                <fullName>Addressed Mail</fullName>
            </value>
            <value>
                <fullName>AP Global Solutions</fullName>
            </value>
            <value>
                <fullName>AP Global Solutions L3</fullName>
            </value>
            <value>
                <fullName>Boxes &amp; Bags</fullName>
            </value>
            <value>
                <fullName>Business &amp; Payments Services</fullName>
            </value>
            <value>
                <fullName>Cash Services</fullName>
            </value>
            <value>
                <fullName>Consumer and Financial Products</fullName>
            </value>
            <value>
                <fullName>Consumer Products L3</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Courier L3</fullName>
            </value>
            <value>
                <fullName>Decipha</fullName>
            </value>
            <value>
                <fullName>Decipha L3</fullName>
            </value>
            <value>
                <fullName>Digital ID L3</fullName>
            </value>
            <value>
                <fullName>Digital ID Services L3</fullName>
            </value>
            <value>
                <fullName>Digital Mailbox L3</fullName>
            </value>
            <value>
                <fullName>Digital Services</fullName>
            </value>
            <value>
                <fullName>Domestic Parcels</fullName>
            </value>
            <value>
                <fullName>eMarketplaces</fullName>
            </value>
            <value>
                <fullName>Express Letters</fullName>
            </value>
            <value>
                <fullName>Express Parcels</fullName>
            </value>
            <value>
                <fullName>Express Post</fullName>
            </value>
            <value>
                <fullName>Federal Services</fullName>
            </value>
            <value>
                <fullName>Financial &amp; Commercial Services</fullName>
            </value>
            <value>
                <fullName>Financial Products</fullName>
            </value>
            <value>
                <fullName>Fulfilment</fullName>
            </value>
            <value>
                <fullName>Fulfilment L3</fullName>
            </value>
            <value>
                <fullName>Government &amp; Agency Services</fullName>
            </value>
            <value>
                <fullName>Identity &amp; Government Services</fullName>
            </value>
            <value>
                <fullName>Identity Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>