force-app/main/default/objects/Product2/listViews/AllActiveProducts.listView-meta.xml
<ListView>
    <fullName>AllActiveProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Product_Level_1__c</columns>
    <columns>Product_Level_2__c</columns>
    <columns>Product_Level_3__c</columns>
    <columns>Product_Level_4__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Products</label>
</ListView>