force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Product_Level_1__c</columns>
    <columns>Product_Level_2__c</columns>
    <columns>Product_Level_3__c</columns>
    <columns>Product_Level_4__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
    <language>en_US</language>
</ListView>