force-app/main/default/objects/Product2/listViews/Identity_and_Government_Services.listView-meta.xml
<ListView>
    <fullName>Identity_and_Government_Services</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Level_2__c</field>
        <operation>contains</operation>
        <value>Identity</value>
    </filters>
    <label>Identity and Government Services</label>
    <sharedTo></sharedTo>
</ListView>