force-app/main/default/objects/Product2/listViews/Product_Family.listView-meta.xml
<ListView>
    <fullName>Product_Family</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Product_Level_2__c</columns>
    <columns>Product_Level_3__c</columns>
    <columns>Product_Level_4__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Product Family</label>
</ListView>